# claude-openai-proxy

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt  start.sh
docs/superpowers/findings/: 2026-07-08-model-auto-stop-findings.md  2026-07-13-caller-reconnect-log-findings.md  2026-07-13-chat-completions-disconnect-findings.md
docs/superpowers/plans/: 2026-07-08-model-auto-stop.md
docs/superpowers/specs/: 2026-07-08-model-auto-stop-design.md
src/: __init__.py  main.py
src/api/: endpoints.py
src/conversion/: request_converter.py  response_converter.py
src/core/: client.py  config.py  constants.py
src/models/: claude.py  openai.py
tests/: test_api.py  test_client.py  test_conversion.py  test_request_converter.py  test_start_sh.sh
