[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "claude-openai-proxy"
version = "1.0.0"
description = "Proxy server enabling OpenAI Chat Completions clients to call Claude Messages compatible services"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "fastapi[standard]>=0.115.11",
    "uvicorn>=0.34.0",
    "pydantic>=2.0.0",
    "python-dotenv>=1.0.0",
    "httpx>=0.25.0",
]

[project.optional-dependencies]
dev = ["pytest>=7.0.0"]

[dependency-groups]
dev = ["pytest>=7.0.0"]

[project.scripts]
claude-openai-proxy = "src.main:main"

[tool.hatch.build.targets.wheel]
packages = ["src"]
